--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-owl-carousel": "^2.3.3",
+    "react-router-dom": "^6.14.2",
     "sass": "^1.63.6",
     "swiper": "^10.0.3"
   },
